[package]
name = "axerrno"
version = "0.1.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Generic error code representation."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axerrno"
documentation = "https://docs.rs/axerrno"
keywords = ["arceos", "errno"]
categories = ["no-std", "os"]

[dependencies]
log = "0.4"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
